[gd_scene load_steps=47 format=3 uid="uid://cxlw0uqgf75vv"]

[ext_resource type="Script" path="res://Scripts/floor_3.gd" id="1_3b7f7"]
[ext_resource type="Texture2D" uid="uid://c7i8hdem33ahx" path="res://Assets/hallwayfl3.png" id="2_ohdb6"]
[ext_resource type="Texture2D" uid="uid://d0v1wpmii5ytk" path="res://Assets/blackhallwaybackground.png" id="3_lgkpl"]
[ext_resource type="Texture2D" uid="uid://cxjq7aitcfip7" path="res://Assets/elevatorsclosed.png" id="4_r47j1"]
[ext_resource type="Texture2D" uid="uid://cusbgno0n5af3" path="res://Assets/elevatorsopen.png" id="5_plnkx"]
[ext_resource type="Texture2D" uid="uid://bk7j67r8fpact" path="res://Assets/elevators3.png" id="6_umtbo"]
[ext_resource type="Texture2D" uid="uid://bxqxwnqx7iql4" path="res://Assets/elevators2.png" id="7_5m71d"]
[ext_resource type="Texture2D" uid="uid://b5mn71kxnlmmf" path="res://Assets/elevators1.png" id="8_nhew8"]
[ext_resource type="Texture2D" uid="uid://btflik3tmo2dj" path="res://Assets/door.png" id="9_8cqmp"]
[ext_resource type="AudioStream" uid="uid://b7n8tmlh6xvox" path="res://Audio/elevator-ding-pixabay.mp3" id="10_jewwf"]
[ext_resource type="AudioStream" uid="uid://dsdtvrw36yuho" path="res://Audio/button_sound.mp3" id="11_le8p0"]
[ext_resource type="AudioStream" uid="uid://crgyy1nb8m3ea" path="res://Audio/elevator-sound-pixabay.mp3" id="12_ld5bq"]
[ext_resource type="AudioStream" uid="uid://bmfiibxrhk24q" path="res://Audio/elevator-open-pixabay.mp3" id="13_0jm21"]
[ext_resource type="AudioStream" uid="uid://cfstuit2e86dr" path="res://Audio/elevator-close2-pixabay.mp3" id="14_lejsn"]
[ext_resource type="AudioStream" uid="uid://bdcyc7vstai0l" path="res://Audio/door-open-pixabay.mp3" id="15_gk5n7"]
[ext_resource type="AudioStream" uid="uid://dcuagxuy0tw33" path="res://Audio/door-close-pixabay.mp3" id="16_learr"]

[sub_resource type="CanvasTexture" id="CanvasTexture_06ra1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nlqve"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_r47j1")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_plnkx")
}, {
"duration": 1.0,
"texture": ExtResource("6_umtbo")
}, {
"duration": 1.0,
"texture": ExtResource("7_5m71d")
}, {
"duration": 1.0,
"texture": ExtResource("8_nhew8")
}, {
"duration": 1.0,
"texture": ExtResource("4_r47j1")
}],
"loop": false,
"name": &"closing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_plnkx")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_r47j1")
}, {
"duration": 1.0,
"texture": ExtResource("8_nhew8")
}, {
"duration": 1.0,
"texture": ExtResource("7_5m71d")
}, {
"duration": 1.0,
"texture": ExtResource("6_umtbo")
}, {
"duration": 1.0,
"texture": ExtResource("5_plnkx")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bmffi"]
a = Vector2(36, 565)
b = Vector2(36, -518)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_pgpm4"]
a = Vector2(-14, -525)
b = Vector2(-14, 578)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_gpd51"]
a = Vector2(-2822.5, 212)
b = Vector2(-1127.5, 212)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3w481"]
a = Vector2(-2823, 212)
b = Vector2(-14, 211)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mjwwt"]
a = Vector2(750, 239)
b = Vector2(-135, 238)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_g6arv"]
a = Vector2(-1912, -222)
b = Vector2(-1514, -222)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljwrb"]
size = Vector2(150, 182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i85oi"]
size = Vector2(775, 182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csgvm"]
size = Vector2(941, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3y83"]
size = Vector2(763, 179)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7i76v"]
size = Vector2(722, 178)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lt6x0"]
size = Vector2(907, 178)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igdre"]
size = Vector2(421, 179)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enkoc"]
size = Vector2(140, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otora"]
size = Vector2(328, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_358sy"]
size = Vector2(328, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xrdq1"]
size = Vector2(65.75, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vcayt"]
size = Vector2(106.5, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f057k"]
size = Vector2(247, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cu6u"]
size = Vector2(125, 35.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pofb7"]
size = Vector2(183, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1h2y3"]
size = Vector2(125, 109)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vq7q0"]
size = Vector2(125, 70.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmuha"]
size = Vector2(182, 110)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2qm4"]
size = Vector2(183, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kn8rn"]
size = Vector2(49, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rywi8"]
size = Vector2(185, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rb80t"]
size = Vector2(185, 60)

[node name="Floor3" type="Node2D"]
script = ExtResource("1_3b7f7")

[node name="Floor3Background" type="Sprite2D" parent="."]
position = Vector2(-1860, 0)
texture = ExtResource("2_ohdb6")
centered = false

[node name="BlackBackground" type="Sprite2D" parent="."]
position = Vector2(-1859, 811)
texture = ExtResource("3_lgkpl")
centered = false

[node name="ElevatorButtonSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(1198, 394)
scale = Vector2(3.99999, 4.00002)
texture = SubResource("CanvasTexture_06ra1")

[node name="ElevatorSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1435, 359)
sprite_frames = SubResource("SpriteFrames_nlqve")
animation = &"closed"

[node name="Unit3ADoorSprite" type="Sprite2D" parent="."]
position = Vector2(-624, 379)
texture = ExtResource("9_8cqmp")

[node name="Unit3ALabel" type="Label" parent="Unit3ADoorSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.5
offset_right = -36.5
offset_bottom = -61.5
grow_horizontal = 2
grow_vertical = 2
text = "3A"
horizontal_alignment = 1

[node name="KnockButton" type="Button" parent="Unit3ADoorSprite"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = -50.0
offset_right = -28.5
offset_bottom = -19.0
grow_horizontal = 2
text = "Knock"

[node name="Unit3BDoorSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-75, 885)
texture = ExtResource("9_8cqmp")

[node name="Unit3BLabel" type="Label" parent="Unit3BDoorSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.5
offset_right = -36.5
offset_bottom = -61.5
grow_horizontal = 2
grow_vertical = 2
text = "3B"
horizontal_alignment = 1

[node name="KnockButton" type="Button" parent="Unit3BDoorSprite"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = -50.0
offset_right = -28.5
offset_bottom = -19.0
grow_horizontal = 2
text = "Knock"

[node name="Unit3CDoorSprite" type="Sprite2D" parent="."]
position = Vector2(444, 378)
texture = ExtResource("9_8cqmp")

[node name="Unit3CLabel" type="Label" parent="Unit3CDoorSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.5
offset_right = -36.5
offset_bottom = -61.5
grow_horizontal = 2
grow_vertical = 2
text = "3C"
horizontal_alignment = 1

[node name="LockpickLabel" type="Label" parent="Unit3CDoorSprite"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -119.0
offset_right = 156.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "No answer
Try to pick the lock?
(Press E again)"
horizontal_alignment = 1

[node name="KnockButton" type="Button" parent="Unit3CDoorSprite"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = -50.0
offset_right = -28.5
offset_bottom = -19.0
grow_horizontal = 2
text = "Knock"

[node name="Unit3DDoorSprite" type="Sprite2D" parent="."]
position = Vector2(2383.5, 380)
scale = Vector2(1.0177, 0.986301)
texture = ExtResource("9_8cqmp")

[node name="Unit3DLabel" type="Label" parent="Unit3DDoorSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.5
offset_right = -36.5
offset_bottom = -61.5
grow_horizontal = 2
grow_vertical = 2
text = "3D"
horizontal_alignment = 1

[node name="KnockButton" type="Button" parent="Unit3DDoorSprite"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = -50.0
offset_right = -28.5
offset_bottom = -19.0
grow_horizontal = 2
text = "Knock"

[node name="Unit3EDoorSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(2924, 885)
scale = Vector2(1.0177, 0.986301)
texture = ExtResource("9_8cqmp")

[node name="Unit3ELabel" type="Label" parent="Unit3EDoorSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.5
offset_right = -36.5
offset_bottom = -61.5
grow_horizontal = 2
grow_vertical = 2
text = "3E"
horizontal_alignment = 1

[node name="KnockButton" type="Button" parent="Unit3EDoorSprite"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = -50.0
offset_right = -28.5
offset_bottom = -19.0
grow_horizontal = 2
text = "Knock"

[node name="Unit3FDoorSprite" type="Sprite2D" parent="."]
position = Vector2(3415.75, 380)
scale = Vector2(1.01327, 0.986301)
texture = ExtResource("9_8cqmp")

[node name="Unit3FLabel" type="Label" parent="Unit3FDoorSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.5
offset_right = -36.5
offset_bottom = -61.5
grow_horizontal = 2
grow_vertical = 2
text = "3F"
horizontal_alignment = 1

[node name="KnockButton" type="Button" parent="Unit3FDoorSprite"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = -50.0
offset_right = -28.5
offset_bottom = -19.0
grow_horizontal = 2
text = "Knock"

[node name="BoundaryBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(-1898, 518)
shape = SubResource("SegmentShape2D_bmffi")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(3915, 515)
shape = SubResource("SegmentShape2D_pgpm4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(961.5, 600)
shape = SubResource("SegmentShape2D_gpd51")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(2842, 599)
shape = SubResource("SegmentShape2D_3w481")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(3150, 572)
shape = SubResource("SegmentShape2D_mjwwt")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(3150, 595)
shape = SubResource("SegmentShape2D_g6arv")

[node name="WallBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(-1784, 356)
shape = SubResource("RectangleShape2D_ljwrb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(-1074.5, 356)
shape = SubResource("RectangleShape2D_i85oi")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(-90.5, 357)
shape = SubResource("RectangleShape2D_csgvm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(889.5, 357.5)
shape = SubResource("RectangleShape2D_s3y83")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(1960, 359)
shape = SubResource("RectangleShape2D_7i76v")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(2899.5, 359)
shape = SubResource("RectangleShape2D_lt6x0")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(3688.5, 358.5)
shape = SubResource("RectangleShape2D_igdre")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(-1639, 409.5)
shape = SubResource("RectangleShape2D_enkoc")

[node name="ElevatorArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorArea2D"]
position = Vector2(1435, 330)
shape = SubResource("RectangleShape2D_otora")

[node name="ElevatorBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorBody2D"]
position = Vector2(1435, 357)
shape = SubResource("RectangleShape2D_358sy")

[node name="ElevatorButtonArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorButtonArea2D"]
position = Vector2(1198, 459)
shape = SubResource("RectangleShape2D_xrdq1")

[node name="ElevatorTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="StairsDownArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StairsDownArea2D"]
position = Vector2(-1515.75, 388.5)
shape = SubResource("RectangleShape2D_vcayt")

[node name="StairsBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StairsBody2D"]
position = Vector2(-1585.5, 318.5)
shape = SubResource("RectangleShape2D_f057k")

[node name="Unit3AArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3AArea2D"]
position = Vector2(-624, 395)
shape = SubResource("RectangleShape2D_8cu6u")

[node name="Unit3BArea2D" type="Area2D" parent="."]
position = Vector2(550, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3BArea2D"]
position = Vector2(-623.5, 289.5)
shape = SubResource("RectangleShape2D_pofb7")

[node name="Unit3CArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3CArea2D"]
position = Vector2(444, 395)
shape = SubResource("RectangleShape2D_8cu6u")

[node name="Unit3DArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3DArea2D"]
position = Vector2(2384, 395)
shape = SubResource("RectangleShape2D_8cu6u")

[node name="Unit3EArea2D" type="Area2D" parent="."]
position = Vector2(550, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3EArea2D"]
position = Vector2(2372, 289.5)
shape = SubResource("RectangleShape2D_pofb7")

[node name="Unit3FArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3FArea2D"]
position = Vector2(3415.5, 394.063)
shape = SubResource("RectangleShape2D_8cu6u")

[node name="Unit3AStaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3AStaticBody2D"]
position = Vector2(-624, 319.5)
shape = SubResource("RectangleShape2D_1h2y3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Unit3AStaticBody2D"]
position = Vector2(-624, 411.25)
shape = SubResource("RectangleShape2D_vq7q0")

[node name="Unit3BStaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(550, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3BStaticBody2D"]
position = Vector2(-623, 351)
shape = SubResource("RectangleShape2D_pmuha")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Unit3BStaticBody2D"]
position = Vector2(-623.5, 278)
shape = SubResource("RectangleShape2D_g2qm4")

[node name="Unit3CStaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(1068, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3CStaticBody2D"]
position = Vector2(-624, 319.5)
shape = SubResource("RectangleShape2D_1h2y3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Unit3CStaticBody2D"]
position = Vector2(-624, 409)
shape = SubResource("RectangleShape2D_vq7q0")

[node name="Unit3DStaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(3007, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3DStaticBody2D"]
position = Vector2(-623.5, 319.5)
shape = SubResource("RectangleShape2D_1h2y3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Unit3DStaticBody2D"]
position = Vector2(-623.5, 409)
shape = SubResource("RectangleShape2D_vq7q0")

[node name="Unit3EStaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(3545, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3EStaticBody2D"]
position = Vector2(-623, 351)
shape = SubResource("RectangleShape2D_pmuha")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Unit3EStaticBody2D"]
position = Vector2(-623.5, 278)
shape = SubResource("RectangleShape2D_g2qm4")

[node name="Unit3FStaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(4039, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3FStaticBody2D"]
position = Vector2(-623.5, 319.5)
shape = SubResource("RectangleShape2D_1h2y3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Unit3FStaticBody2D"]
position = Vector2(-623.5, 409.375)
shape = SubResource("RectangleShape2D_vq7q0")

[node name="Unit3ARugArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3ARugArea2D"]
position = Vector2(-624, 456)
shape = SubResource("RectangleShape2D_kn8rn")

[node name="Unit3BRugArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3BRugArea2D"]
position = Vector2(-73, 802)
shape = SubResource("RectangleShape2D_kn8rn")

[node name="Unit3BDoorArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3BDoorArea2D"]
position = Vector2(-73.5, 781.5)
shape = SubResource("RectangleShape2D_rywi8")

[node name="Unit3CRugArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3CRugArea2D"]
position = Vector2(444, 456)
shape = SubResource("RectangleShape2D_kn8rn")

[node name="Unit3DRugArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3DRugArea2D"]
position = Vector2(2383, 457)
shape = SubResource("RectangleShape2D_kn8rn")

[node name="Unit3ERugArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3ERugArea2D"]
position = Vector2(2924, 801)
shape = SubResource("RectangleShape2D_kn8rn")

[node name="Unit3EDoorArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3EDoorArea2D"]
position = Vector2(2921.5, 781)
shape = SubResource("RectangleShape2D_rb80t")

[node name="Unit3FRugArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Unit3FRugArea2D"]
position = Vector2(3417, 457)
shape = SubResource("RectangleShape2D_kn8rn")

[node name="ElevatorDingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_jewwf")

[node name="ButtonPressAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_le8p0")
pitch_scale = 0.8

[node name="KnockingAudio" type="AudioStreamPlayer" parent="."]
volume_db = 4.0

[node name="ElevatorAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ld5bq")
volume_db = -1.0

[node name="ElevatorOpenAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_0jm21")
volume_db = -4.0

[node name="ElevatorCloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_lejsn")

[node name="DoorOpenAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_gk5n7")
volume_db = 6.0

[node name="DoorCloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_learr")
volume_db = 4.0

[node name="LockpickLabelTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="animation_finished" from="ElevatorSprite" to="." method="_on_elevator_sprite_animation_finished"]
[connection signal="pressed" from="Unit3ADoorSprite/KnockButton" to="." method="_on_knock_button_pressed"]
[connection signal="pressed" from="Unit3BDoorSprite/KnockButton" to="." method="_on_knock_button_pressed"]
[connection signal="pressed" from="Unit3CDoorSprite/KnockButton" to="." method="_on_knock_button_pressed"]
[connection signal="pressed" from="Unit3DDoorSprite/KnockButton" to="." method="_on_knock_button_pressed"]
[connection signal="pressed" from="Unit3EDoorSprite/KnockButton" to="." method="_on_knock_button_pressed"]
[connection signal="pressed" from="Unit3FDoorSprite/KnockButton" to="." method="_on_knock_button_pressed"]
[connection signal="body_entered" from="ElevatorArea2D" to="." method="_on_elevator_area_2d_body_entered"]
[connection signal="body_entered" from="ElevatorButtonArea2D" to="." method="_on_elevator_button_area_2d_body_entered"]
[connection signal="body_exited" from="ElevatorButtonArea2D" to="." method="_on_elevator_button_area_2d_body_exited"]
[connection signal="timeout" from="ElevatorTimer" to="." method="_on_elevator_timer_timeout"]
[connection signal="body_entered" from="StairsDownArea2D" to="." method="_on_stairs_down_area_2d_body_entered"]
[connection signal="body_entered" from="Unit3AArea2D" to="." method="_on_unit_3a_area_2d_body_entered"]
[connection signal="body_entered" from="Unit3BArea2D" to="." method="_on_unit_3b_area_2d_body_entered"]
[connection signal="body_entered" from="Unit3CArea2D" to="." method="_on_unit_3c_area_2d_body_entered"]
[connection signal="body_entered" from="Unit3DArea2D" to="." method="_on_unit_3d_area_2d_body_entered"]
[connection signal="body_entered" from="Unit3EArea2D" to="." method="_on_unit_3e_area_2d_body_entered"]
[connection signal="body_entered" from="Unit3FArea2D" to="." method="_on_unit_3f_area_2d_body_entered"]
[connection signal="body_entered" from="Unit3ARugArea2D" to="." method="_on_unit_3a_rug_area_2d_body_entered"]
[connection signal="body_exited" from="Unit3ARugArea2D" to="." method="_on_unit_3a_rug_area_2d_body_exited"]
[connection signal="body_entered" from="Unit3BRugArea2D" to="." method="_on_unit_3b_rug_area_2d_body_entered"]
[connection signal="body_exited" from="Unit3BRugArea2D" to="." method="_on_unit_3b_rug_area_2d_body_exited"]
[connection signal="body_entered" from="Unit3BDoorArea2D" to="." method="_on_unit_3b_door_area_2d_body_entered"]
[connection signal="body_exited" from="Unit3BDoorArea2D" to="." method="_on_unit_3b_door_area_2d_body_exited"]
[connection signal="body_entered" from="Unit3CRugArea2D" to="." method="_on_unit_3c_rug_area_2d_body_entered"]
[connection signal="body_exited" from="Unit3CRugArea2D" to="." method="_on_unit_3c_rug_area_2d_body_exited"]
[connection signal="body_entered" from="Unit3DRugArea2D" to="." method="_on_unit_3d_rug_area_2d_body_entered"]
[connection signal="body_exited" from="Unit3DRugArea2D" to="." method="_on_unit_3d_rug_area_2d_body_exited"]
[connection signal="body_entered" from="Unit3ERugArea2D" to="." method="_on_unit_3e_rug_area_2d_body_entered"]
[connection signal="body_exited" from="Unit3ERugArea2D" to="." method="_on_unit_3e_rug_area_2d_body_exited"]
[connection signal="body_entered" from="Unit3EDoorArea2D" to="." method="_on_unit_3e_door_area_2d_body_entered"]
[connection signal="body_exited" from="Unit3EDoorArea2D" to="." method="_on_unit_3e_door_area_2d_body_exited"]
[connection signal="body_entered" from="Unit3FRugArea2D" to="." method="_on_unit_3f_rug_area_2d_body_entered"]
[connection signal="body_exited" from="Unit3FRugArea2D" to="." method="_on_unit_3f_rug_area_2d_body_exited"]
[connection signal="finished" from="KnockingAudio" to="." method="_on_knocking_audio_finished"]
[connection signal="timeout" from="LockpickLabelTimer" to="." method="_on_lockpick_label_timer_timeout"]
